# FelisFramework

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
Source/: Main.cpp  Time.cpp  Time.h  stdafx.h
Source/Application/: CommandLineArguments.cpp  CommandLineArguments.h  IApplication.cpp  IApplication.h
Source/Examples/: ExampleApplication.cpp  ExampleApplication.h
Source/Utils/: Constants.h  Defines.h  Enums.h  Macros.h
Source/Utils/Logger/: ConsoleFormat.cpp  ConsoleFormat.h  Log.cpp  Log.h  Logger.cpp  Logger.h
Source/Utils/Logger/Formatters/: ILogFormatter.cpp  ILogFormatter.h  LogFormatterConsole.cpp  LogFormatterConsole.h
Source/Utils/Logger/Writers/: ILogWriter.cpp  ILogWriter.h  LogWriterConsole.cpp  LogWriterConsole.h
Source/Utils/Time/: DateTime.cpp  DateTime.h  Duration.cpp  Duration.h  Time.cpp  Time.h
